# PaperDesk

./: .gitignore  README.md  flake.nix  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
src/: app.css  app.html  global.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/templates/article/: main.typ
src-tauri/resources/templates/thesis/: main.typ  paperdesk.json
src-tauri/src/: bib_watch.rs  lib.rs  main.rs  tinymist_preview.rs
src-tauri/src/commands/: ai.rs  clipboard_paste.rs  compile_cmd.rs  fs.rs  history_cmd.rs  mod.rs  project.rs
src-tauri/src/project/: history.rs  mod.rs  paths.rs
src-tauri/src/typst_engine/: mod.rs  noop_progress.rs  world.rs
src/lib/: appSettings.svelte.ts  settingsModal.svelte.ts
src/lib/ai/: featherlessSuggestedModels.ts
src/lib/components/: AiAssistantPanel.svelte  ConfirmModal.svelte  DiagnosticsPanel.svelte  EditorPane.svelte  FileTree.svelte  HistoryPanel.svelte  InputModal.svelte  MessageModal.svelte  PreviewPane.svelte  RecentProjectRow.svelte  SettingsModal.svelte
src/lib/editor/: buildFileTree.ts  cmTheme.ts  compileDiagnosticsCm.ts  sourceScrollCm.ts  spellDictionaries.ts  spellExtraDe.dic  spellIncremental.ts  spellWorker.ts  spellWorkerClient.ts  spellcheckTypst.ts  spellcheckTypstCore.ts  typstAutocomplete.ts  utf16CodePoints.ts
src/lib/history/: parsePatch.ts
src/lib/i18n/: locale.svelte.ts  messages.ts
src/lib/pdf/: renderFirstPageThumb.ts
src/lib/tauri/: api.ts  projectEditorWindow.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/project/: +page.svelte
