[package]
name = "paperdesk"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "paperdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"

chrono = "0.4"
ecow = "0.2"
parking_lot = "0.12"
rustc-hash = "2"
rayon = "1"

typst = "0.14.2"
typst-pdf = "0.14.2"
typst-kit = { version = "0.14.2", features = ["embed-fonts"] }
typst-timing = "0.14.2"
typst-ide = "0.14.2"
