[package]
name = "paperdesk"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "paperdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
ureq = { version = "2", features = ["tls"] }
flate2 = "1"
tar = "0.4"
zip = "2"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

chrono = "0.4"
ecow = "0.2"

typst = "0.14.2"
typst-pdf = "0.14.2"
typst-kit = { version = "0.14.2", features = ["embed-fonts"] }
typst-timing = "0.14.2"
typst-ide = "0.14.2"
tungstenite = { version = "0.26", default-features = false, features = ["handshake", "url"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
notify = "8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
